discussion/kv_engine/173323/173323_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Unify "Disk" and "Memory" backfills

Both types of backfill can now share the same state machine. This
is done by moving the state machine code into DCPBackfill and
removing the now duplicate code from each of the sub-classes.

The DCP backfill hierarchy is now much simpler.

                DCPBackfillIface
                        |
                    DCPBackfill
                        |
       .----------------.-----------------------.
       |                |                       |
DCPBackfillByIdDisk DCPBackfillByIdSeqno DCPBackfillMemoryBuffered

The concrete classes also bring in extra classes for sharing common
data.

DCPBackfillBySeqno is shared by DCPBackfillByIdSeqno and
DCPBackfillMemoryBuffered. This defines the seqno range variables
required for scanning a seqno range.

DCPBackfillDisk is shared by DCPBackfillByIdDisk and
DCPBackfillByIdSeqno. This defines the ScanContext and KVBucket
variables required for a disk scan.

Change-Id: Ibd1fa31fa072b6e71937b3a6e2a1035e95223680

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-08 21:02:33.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-08 21:09:43.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38617/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38617/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17349/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3: error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1853:23: note: in instantiation of function template specialization "fmt::v8::detail::make_arg<true, fmt::v8::basic_format_context<fmt::v8::appender, char>, fmt::v8::detail::type::custom_type, Vbid &, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1872:10: note: in instantiation of function template specialization "fmt::v8::format_arg_store<fmt::v8::basic_format_context<fmt::v8::appender, char>, char [45], Vbid>::format_arg_store<char const (&)[45], Vbid &>" requested here
  return {std::forward<Args>(args)...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3119:28: note: in instantiation of function template specialization "fmt::v8::make_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char>, char const (&)[45], Vbid &>" requested here
  return vformat(fmt, fmt::make_format_args(args...));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:45:37: note: in instantiation of function template specialization "fmt::v8::format<char const (&)[45], Vbid>" requested here
        throw std::logic_error(fmt::format("{}: {} called in State::Done",
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:23:20: error: no member named "makeGuard" in namespace "folly" [clang-diagnostic-error]
            folly::makeGuard([start = std::chrono::steady_clock::now(), this] {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:60:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10: error: "shared_ptr" file not found [clang-diagnostic-error]
#include <shared_ptr>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17349/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17349/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45984/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\dcp/backfill_disk.h(17): fatal error C1083: Cannot open include file: "shared_ptr": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45984/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6960/ : FAILURE

Compile error at [2022-05-08T21:04:41.000Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6960/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20135/ : FAILURE

Compile error at [2022-05-08T21:03:43.744Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20135/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19107/ : FAILURE

Compile error at [2022-05-08T21:06:36.005Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: shared_ptr: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19107/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19450/ : FAILURE

Compile error at [2022-05-08T21:04:29.805Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: shared_ptr: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19450/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18298/ : FAILURE

Compile error at [2022-05-08T21:05:23.022Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18298/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7052/ : FAILURE

Compile error at [2022-05-08T21:07:27.311Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: shared_ptr: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7052/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27507/ : FAILURE

Compile error at [2022-05-08T21:06:53.807Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27507/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16353/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
